# llama-cpp-python-windows-cuda-wheels

./: CMakeLists.txt  README.md  build-wheel.bat  build-wheel.ps1  build.yaml  pyproject.toml
.github/workflows/: ci-wheel.yml  watch-upstream.yml
scripts/: bump-llama.ps1  bump-llama.sh
