# pyproject.toml  – fixed
[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name            = "llama-cpp-python-windows-cuda"
version         = "0.0.1"
description     = "Pre-built Windows CUDA wheels for llama-cpp-python"
authors         = [{ name = "Your Name" }]
license         = { text = "MIT" }
readme          = "README.md"
name            = "llama-cpp-python-windows-cuda"
version         = "0.0.1"
description     = "Pre-built Windows CUDA wheels for llama-cpp-python"
authors         = [{ name = "Your Name" }]
license         = { text = "MIT" }
readme          = "README.md"
requires-python = ">=3.8"

[tool.scikit-build]           # ── core settings
cmake.build-type = "Release"
wheel.py-api     = "py3"

[tool.scikit-build.wheel]     # ── exactly ONE wheel block
packages = ["llama_cpp"]
# add more wheel-related keys here if you need them
